--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
 
   cloud_firestore: ^4.17.5
 
+  flutter_dotenv: ^5.1.0
+
   google_fonts: ^6.2.1
 
   intl: 
@@ -70,6 +72,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - .env
 
   # To add assets to your application, add an assets section, like this:
   # assets:
