--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   firebase_auth: ^4.20.0
   cloud_firestore: ^4.17.5
   google_fonts: ^6.2.1
+  flutter_dotenv: ^5.1.0
   intl: ^0.19.0
 
   cupertino_icons: ^1.0.6
@@ -57,7 +58,8 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
+  assets:
+    - .env
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
